<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageViewApp"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:src="@drawable/app_icon" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:padding="20dp"
        android:gravity="center"
        android:textColor="@color/my_second_blue"
        android:text="SMS TRACKER APP"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/ajout_contact_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@color/fastlane_background"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/ajouter_un_contact"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/list_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@color/my_second_blue"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/liste_des_contacts"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/voir_messages_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/my_secondary"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/voir_les_messages"
        android:textSize="25sp"
        android:textStyle="bold" />

</LinearLayout>