<?xml version="1.0" encoding="utf-8"?><!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fastlane_background"
    tools:context=".AjoutContact">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/cardView_marginBottom"
        app:cardCornerRadius="@dimen/cardView_cardCornerRadius">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/linearLayout_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enr_gistrement_d_un_contact"
                android:textColor="@color/fastlane_background"
                android:textSize="25sp"
                android:textStyle="bold" />
            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="Nom"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/et_nom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/person_icon"
                android:inputType="text" />
            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/num_ro_de_t_l_phone"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/phone_icon"
                android:inputType="phone" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp" />
            <Button
                android:id="@+id/btn_save"
                android:layout_width="850dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/enr_gistrer"
                android:textColor="@color/white"
                android:background="@color/fastlane_background"
                android:textSize="20dp"/>
            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>